--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ button:hover {
 .hero-section {
   background-color: black;
   color: white;
-  display: grid;
   background-image: url("../img/hero-bg.jpg");
   background-attachment: fixed;
   background-position: center;
@@ -66,7 +65,8 @@ button:hover {
   grid-template-areas: ". .";
   justify-content: center;
   align-content: center;
-  margin: 0px auto 250px auto;
+  height: 100%;
+  transform: translateY(-100px);
 }
 .hero-section .hero-section__content .hero-section__content__headline {
   font-size: 140px;
@@ -1075,10 +1075,10 @@ button:hover {
   }
 
   .hero-section {
-    height: 100vh;
+    height: 768px;
   }
   .hero-section .hero-section__content {
-    margin: 0px auto 200px auto;
+    transform: translateY(-100px);
   }
   .hero-section .hero-section__content .hero-section__content__headline {
     font-size: 100px;
@@ -1092,121 +1092,120 @@ button:hover {
   .hero-section .hero-section__content .hero-section__content__headline #challenger {
     margin: 0px 0px 0px 60px;
   }
-  .hero-section .hero-section__content__blured-block {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    -webkit-backdrop-filter: blur(8px);
-    backdrop-filter: blur(8px);
-    background-color: rgba(255, 255, 255, 0.03);
+  .hero-section .hero-section__content .hero-section__content__specs .hero-section__content__specs__headline {
+    font-size: 36px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content {
     padding: 0px 40px;
-    box-sizing: border-box;
-    max-width: 1440px;
-    height: 300px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 0px 0px;
-    grid-template-areas: ". .";
-    justify-content: center;
-    align-items: center;
+    max-width: 1280px;
+    height: 260px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events {
     padding: 40px 0px;
-    box-sizing: border-box;
-    height: 300px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 0px 40px;
-    align-self: center;
-    grid-template-areas: "headline headline" "item1 item2";
+    height: 260px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__headline {
-    grid-area: headline;
-    font-size: 48px;
-    line-height: 1;
-    align-self: start;
-    height: 40px;
-    margin: 0px 0px 30px 0px;
-    letter-spacing: 4px;
+    font-size: 36px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__item {
-    align-self: start;
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-size: 14px;
-    line-height: 22px;
-    color: rgba(255, 255, 255, 0.6);
     height: 60px;
   }
-  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__item span {
-    font-weight: 500;
-    color: white;
-  }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__btn {
-    color: #cab039;
-    font-size: 24px;
-    line-height: 22px;
-    align-self: end;
-    margin: 40px 0px 0px 0px;
-    letter-spacing: 4px;
+    font-size: 20px;
+    margin: 30px 0px 0px 0px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news {
-    height: 300px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "image .";
-    align-self: center;
+    height: 260px;
     gap: 0px 40px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__img {
-    grid-area: image;
-    background-image: url("../img/hero-bg-2.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 300px;
-    height: 300px;
+    width: 260px;
+    height: 260px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description {
     padding: 40px 0px;
-    box-sizing: border-box;
-    display: grid;
-    height: 300px;
-    align-self: center;
+    height: 260px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__headline {
-    font-size: 48px;
-    line-height: 1;
-    align-self: start;
-    height: 40px;
-    margin: 0px 0px 30px 0px;
-    letter-spacing: 4px;
+    font-size: 36px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__paragraph {
-    align-self: start;
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-size: 14px;
-    line-height: 22px;
-    color: rgba(255, 255, 255, 0.6);
     height: 60px;
   }
   .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__btn {
-    color: #cab039;
-    font-size: 24px;
-    line-height: 22px;
-    align-self: end;
-    margin: 40px 0px 0px 0px;
-    letter-spacing: 4px;
+    font-size: 20px;
+    margin: 30px 0px 0px 0px;
+  }
+}
+@media (max-width: 1024px) {
+  .content {
+    max-width: 1024px;
+    padding: 0px 40px;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+
+  .hero-section {
+    height: 768px;
+  }
+  .hero-section .hero-section__content {
+    transform: translateY(-100px);
+  }
+  .hero-section .hero-section__content .hero-section__content__headline {
+    font-size: 100px;
+    line-height: 100px;
+    order: 1;
+  }
+  .hero-section .hero-section__content .hero-section__content__headline #dodge {
+    font-size: 160px;
+    margin: 0px 0px 0px -10px;
+  }
+  .hero-section .hero-section__content .hero-section__content__headline #challenger {
+    margin: 0px 0px 0px 60px;
+  }
+  .hero-section .hero-section__content .hero-section__content__specs .hero-section__content__specs__headline {
+    font-size: 36px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content {
+    padding: 0px 40px;
+    max-width: 1280px;
+    height: 260px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events {
+    padding: 40px 0px;
+    height: 260px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__headline {
+    font-size: 36px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__item {
+    height: 60px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__btn {
+    font-size: 20px;
+    margin: 30px 0px 0px 0px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news {
+    height: 260px;
+    gap: 0px 40px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__img {
+    width: 260px;
+    height: 260px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description {
+    padding: 40px 0px;
+    height: 260px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__headline {
+    font-size: 36px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__paragraph {
+    height: 60px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__btn {
+    font-size: 20px;
+    margin: 30px 0px 0px 0px;
   }
 }
 @media (max-width: 768px) {
